# ScholarAI

./: README.md
Frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
Frontend/src/: App.tsx
Frontend/src/components/auth/: ProtectedRoute.tsx  SignIn.tsx  SignUp.tsx
Frontend/src/components/home/: FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  TestimonialsSection.tsx
Frontend/src/components/layout/: Footer.tsx  Navbar.tsx
Frontend/src/components/ui/: Avatar.tsx  Button.tsx  ParticlesBackground.tsx
Frontend/src/context/: AuthContext.tsx
Frontend/src/lib/: supabase.ts
Frontend/src/pages/: Home.tsx  pricing.tsx
fastapi-backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
fastapi-backend/.github/workflows/: test.yml
fastapi-backend/Models/Embedding_model/: cohere_embed.py  text_embedding_model.py
fastapi-backend/auth/: middleware.py  router.py
fastapi-backend/databases/qdrant/: qdrant_store.py
fastapi-backend/databases/weaviate/: weaviate_client.py
fastapi-backend/prompts/: Document_QA_prompt.txt
fastapi-backend/routes/: document_qa_route.py  video_qa_route.py  visual_qa_route.py
